# redoubt-desktop

./: .releaserc  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  shortcuts.rs
src/components/auth/: LoginForm.tsx  RegisterForm.tsx
src/components/chat/: AttachmentPreview.tsx  ChatPanel.tsx  EmojiAutocomplete.tsx  EmojiPicker.tsx  FileUpload.tsx  ImageLightbox.tsx  LinkPreview.tsx  MessageContent.tsx  MessageDateDivider.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  Thread.tsx  ThreadReplyInput.tsx  TypingIndicator.tsx  index.ts
src/components/instance/: AddInstanceDialog.tsx  InstanceTabBar.tsx  NoInstancesView.tsx  RemoveInstanceDialog.tsx  index.ts
src/components/layout/: AppSidebar.tsx  SiteHeader.tsx
src/components/settings/: AvatarUpload.tsx  InviteMembersDialog.tsx  UserSettings.tsx
src/hooks/: useAudioDevices.ts  useAuthenticatedAvatar.ts  useAuthenticatedImage.ts  useGlobalShortcuts.ts  useVoice.ts  useWebSocket.ts
src/lib/: api.ts  connectionManager.ts  fetch.ts  migration.ts  secureStorage.ts  soundManager.ts  webSocketManager.ts
src/store/: authStore.ts  chatStore.ts  createInstanceStore.ts  emojiStore.ts  instanceStore.ts  linkPreviewStore.ts  presenceStore.ts  settingsStore.ts  spaceStore.ts  voiceStore.ts
src/types/: api.ts  instance.ts
(+14 files in other folders)
